--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
-    "react-scripts": "1.1.5"
+    "fetch-mock": "^7.0.0-alpha.6",
+    "react-scripts": "1.1.5",
+    "redux-mock-store": "^1.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
